# specs-physics

./: .gitmodules  Cargo.toml  README.md
examples/: README.md  basic.rs  batch.rs  collision.rs  events.rs  hierarchy.rs  positions.rs
examples/amethyst/: main.rs  prefab.rs  systems.rs
examples/amethyst/assets/prefab/: renderable.ron
src/: builder.rs  lib.rs  position.rs  stepper.rs
src/stepper/: resource.rs
src/systems/: batch.rs  mod.rs  physics_stepper.rs  pose.rs  stepper.rs  sync_bodies_from_physics.rs  sync_bodies_to_physics.rs
src/world/: body_set.rs  collider_set.rs  mod.rs
